# P2PFDL

./: .gitignore  DecenTraining.sh  aggregator.py  data.py  gilberts.py  main.py  profile.txt  pyproject.toml  ransac.py  tverberg.py  utils.py
attacks/: mmattack.py
configs/: bad_clients_rand.txt  bad_clis.txt  chord.txt  erdos_renyi.txt  experiment.yaml
model/: ResNet_Cifar.py  tinyCNN.py  train.py
optimal/mean/: loss_epoch_1.txt  loss_epoch_2.txt  loss_epoch_3.txt  loss_epoch_4.txt  loss_epoch_5.txt  test_results_epoch_1.txt
run/: vnseek.err  vnseek.sh
scripts/: analyze.py  draft.py  example_attack.py  example_usage.py  topology.py
simulation/: process.py  training.py
slurm/: DecenTraining.sh  Decen_gpu.sh  data.out
slurm_run/: Test.sh
src/: baseline.py
src/decen_learn/: __init__.py  config.py
src/decen_learn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/decen_learn/aggregators/: __init__.py  aggregator.py  base.py  geomedian.py  krum.py  mean.py  trimmed_mean.py  tverberg.py
src/decen_learn/attacks/: __init__.py  attack.py  base.py  ipm.py  ipmglobal.py  lie.py  minmax.py
src/decen_learn/core/: __init__.py  byzantine_node.py  device_manager.py  local_trainer.py  node.py  node_state.py  utils.py  weight_projector.py
src/decen_learn/data/: __init__.py  loaders.py  partitioning.py  poisioning.py
src/decen_learn/models/: __init_.py  __init__.py  resnet_cifar.py  tiny_cnn.py
tests/: report.txt  test_aggregator.py  test_core.py  test_model_data.py  test_resnet.py  test_training.py  test_tverberg.py
(+7 files in other folders)
